best-practices/restrict-image-registries/.chainsaw-test/bad-pod-noregistry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod04-registry
spec:
  containers:
  - name: k8s-nginx
    image: ghcr.io/kyverno/test-nginx
